# SupportHive-C

./: .editorconfig  .env.example  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  build_portable.ps1  index.html
.github/: dependabot.yml
.github/workflows/: c-ci.yml  ci-cpp.yml  ci.yml  codeql.yml  demo-ci.yml
dashboard/: index.html
docs/: index.html
include/: db.h  notifier.h  router.h  server.h  sla_engine.h
src/: analytics_engine.c  buffer_manager.c  config_parser.c  db.c  event_loop_ext.c  main.c  memory_pool.c  network_utils.c  notifier.c  router.c  security.c  server.c  sla_engine.c
